# credential-leak-demo

./: README.md  RUNBOOK_UC_QUERY_WITH_CLIENT_SECRET.md  pyproject.toml
src/credential_leak_demo/: __init__.py  simulator.py
