[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "credential-leak-demo"
version = "0.1.0"
description = "Safe demo package that simulates dependency-based credential exfiltration against fake values only."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Demo Lab" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
